smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/trait-on-eof.smithy
// Syntax error at line 5, column 1: Expected IDENTIFIER but found EOF | Model
namespace com.foo

@deprecated
